Add login admin button for e2e publish feedback test

--- a/MQuince/MQuince.APIGateway/clientapp/public/Communication/Feedbacks.html
+++ b/MQuince/MQuince.APIGateway/clientapp/public/Communication/Feedbacks.html
@@ -146,6 +146,7 @@
                         </ul>
                     </li>
                     <li v-on:click="logIn" v-bind:hidden="!showLogIn"><a href="#">Log in</a></li>
+                    <li v-on:click="logInAdmin" v-bind:hidden="!showLogIn"><a href="#">Log in admin</a></li>
                     <li v-on:click="logOut" v-bind:hidden="!showLogOut"><a href="#">Log out</a></li>
 
                 </ul>
