Modify spelling mistakes on front

--- a/MQuince/MQuince.APIGateway/clientapp/public/Communication/AdminFeedback.html
+++ b/MQuince/MQuince.APIGateway/clientapp/public/Communication/AdminFeedback.html
@@ -174,7 +174,7 @@
         <div class="container" id="adminFeedback">
             <!-- Icon Divider-->
             <!-- Contact Section Form-->
-            <h4 class=" text-center  mb-0 text-uppercase" style="margin-top: 55px;">Feedbacks</h4>
+            <h4 class=" text-center  mb-0 text-uppercase" style="margin-top: 55px;">Feedback</h4>
             <br/>
             <div class="col-lg-8 mx-auto">
                 <select name="feedbackOption" id="feedbackOption" v-model="status" v-on:change="statusChanged" style="width:200px; margin-left: 520px; margin-top: 20px;">
