--- a/MQuince/MQuince.APIGateway/clientapp/public/Communication/Feedbacks.html
+++ b/MQuince/MQuince.APIGateway/clientapp/public/Communication/Feedbacks.html
@@ -156,14 +156,14 @@
 
     <!-- Contact Section-->
     <section class="page-section" id="contact">
-       <h4 class=" text-center  mb-0 text-uppercase" style="margin-top: 55px;">Feedbacks</h4>
+       <h4 class=" text-center  mb-0 text-uppercase" style="margin-top: 55px;">Feedback</h4>
     
        <div class="container" id="feedbacks">
             <!-- Icon Divider-->
             <!-- Contact Section Form-->
             <br/>
             <div class="col-lg-8 mx-auto">
-                <select name="feedbackOption" id="feedbackOption" v-model="status" @change="onChange" style="width:200px; margin-left: 520px; margin-top: 20px;">
+                <select v-bind:hidden="showLogIn" name="feedbackOption" id="feedbackOption" v-model="status" @change="onChange" style="width:200px; margin-left: 520px; margin-top: 20px;">
                     <option value="AllFeedbacks" selected="selected">AllFeedbacks</option>
                     <option v-bind:hidden="showLogIn" value="MyFeedbacks">MyFeedbacks</option>
                 </select>
