--- a/MQuince/MQuince.APIGateway/clientapp/public/index.html
+++ b/MQuince/MQuince.APIGateway/clientapp/public/index.html
@@ -55,11 +55,12 @@
     <div id="headerMain">
 
     </div>
-        
-    
+
     <div >
-        <section style="margin-top: 30px; max-height: 450px; object-fit: fill;" id="hero" class="d-flex align-items-center">
-            <div class="container">
+        <section style="margin-top: 30px; max-height: 550px; object-fit: fill;" id="hero" class="d-flex align-items-center">
+            <div style="margin-left: 10%" class="container">
+                <h1 >Welcome to MQuince</h1>
+                <a href="/public/Login/Login.html" class="btn-get-started scrollto">Login</a>
             </div>
         </section>
     </div>
