--- a/MQuince/MQuince.APIGateway/clientapp/public/index.html
+++ b/MQuince/MQuince.APIGateway/clientapp/public/index.html
@@ -55,7 +55,7 @@
     <div id="headerMain">
 
     </div>
-
+    
     <div >
         <section style="margin-top: 30px; max-height: 550px; object-fit: fill;" id="hero" class="d-flex align-items-center">
             <div style="margin-left: 10%" class="container">
@@ -64,14 +64,12 @@
             </div>
         </section>
     </div>
-    
-
     <script src="scripts/vue.js"></script>
     <script src="scripts/vue-router.js"></script>
     <script src="scripts/axios.js"></script>
 
     <script src="scripts/vuejs-datepicker.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/places.js@1.19.0"></script>
+    <script  v-bind:hidden="!showLogIn" src="https://cdn.jsdelivr.net/npm/places.js@1.19.0"></script>
     <script src="../public/index.js"></script>
     <script src="../public/Header/Header.js"></script>
 
