--- a/MQuince/MQuince.APIGateway/clientapp/public/Appointment/Appointment.html
+++ b/MQuince/MQuince.APIGateway/clientapp/public/Appointment/Appointment.html
@@ -238,7 +238,7 @@
                             </td>
                             <td style="padding-left:150px;">
                                 <button v-on:click="cancelAppointment(appointment.id)" v-if="Date.now() < new Date(appointment.entityDTO.endDateTime)" style="background: #1977cc;margin-top:100px;margin-bottom:-15px" class="btn btn-primary btn-xl" type="button">Cancel appointment</button>
-                                <button id="myBtn" v-on:click="report(appointment)" v-else style="background: #1977cc;margin-top:100px;margin-bottom:-15px" class="btn btn-primary btn-xl" type="button">View report</button>
+                                <button id="myBtn" v-on:click="report(appointment.id)" v-else style="background: #1977cc;margin-top:100px;margin-bottom:-15px" class="btn btn-primary btn-xl" type="button">View report</button>
                             </td>
                         </tr>
                     </table>
