Fixed bug on frontend for observing reports

--- a/MQuince/MQuince.APIGateway/clientapp/public/Appointment/Appointment.html
+++ b/MQuince/MQuince.APIGateway/clientapp/public/Appointment/Appointment.html
@@ -268,11 +268,9 @@
             <p><b>Time from: {{timeFrom}}</b></p>
             <p><b>Time to: {{timeTo}}</b></p>
             <p><b>Doctor: {{doctorName}}</b></p>
-            <p class="borderexample">{{reportText}}</p>
+            <p>{{reportText}}</p>
         </div>
-        <div class="modal-footer">
-         <h3></h3>
-        </div>
+        
         </div>
     </div>
     </div>
